Complete draft of flat calibration

--- a/notebooks/05.03-Calibrating-the-flats.ipynb
+++ b/notebooks/05.03-Calibrating-the-flats.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Example-1\" data-toc-modified-id=\"Example-1-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Example 1</a></span><ul class=\"toc-item\"><li><span><a href=\"#Subtract-overscan-and-trim,-if-necessary\" data-toc-modified-id=\"Subtract-overscan-and-trim,-if-necessary-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Subtract overscan and trim, if necessary</a></span></li><li><span><a href=\"#Subtract-bias,-if-necessary\" data-toc-modified-id=\"Subtract-bias,-if-necessary-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Subtract bias, if necessary</a></span></li><li><span><a href=\"#Subtract-dark-current,-scaling-if-necessary-(scale-down-when-possible)\" data-toc-modified-id=\"Subtract-dark-current,-scaling-if-necessary-(scale-down-when-possible)-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Subtract dark current, scaling if necessary (scale down when possible)</a></span></li><li><span><a href=\"#Calibrated-all-of-the-flats-in-the-folder\" data-toc-modified-id=\"Calibrated-all-of-the-flats-in-the-folder-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Calibrated all of the flats in the folder</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Calibrating the flats\n",
@@ -27,6 +17,60 @@
     "+ Subtract dark current, scaling if necessary (scale down when possible)\n",
     "\n",
     "As in the chapters about bias and dark we will work through two example. In Example 1 the darks are not scaled and the overscan region is used as part of the calibration. In Example 2 the darks are scaled and the overscan region is trimmed off without being used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function definition \n",
+    "\n",
+    "The function below finds the nearest dark exposure time to the exposure time of a given image. An exception is raised if the difference in exposure time is larger than `tolerance`, unless `tolerance` is set to `None`. A small numerical tolerance is most useful if you anticipate not scaling the dark frames and finding a dark exposure time close to the time of the image. Disregarding the tolerance is useful if the intent is to scale the dark frames anyway."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_nearest_dark_exposure(image, dark_exposure_times, tolerance=0.5):\n",
+    "    \"\"\"\n",
+    "    Find the nearest exposure time of a dark frame to the exposure time of the image,\n",
+    "    raising an error if the difference in exposure time is more than tolerance.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    \n",
+    "    image : astropy.nddata.CCDData\n",
+    "        Image for which a matching dark is needed.\n",
+    "    \n",
+    "    dark_exposure_times : list\n",
+    "        Exposure times for which there are darks.\n",
+    "    \n",
+    "    tolerance : float or ``None``, optional\n",
+    "        Maximum difference, in seconds, between the image and the closest dark. Set\n",
+    "        to ``None`` to skip the tolerance test.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    \n",
+    "    float\n",
+    "        Closest dark exposure time to the image.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dark_exposures = np.array(list(dark_exposure_times))\n",
+    "    idx = np.argmin(np.abs(dark_exposures - image.header['exptime']))\n",
+    "    closest_dark_exposure = dark_exposures[idx]\n",
+    "\n",
+    "    if (tolerance is not None and \n",
+    "        np.abs(image.header['exptime'] - closest_dark_exposure) > tolerance):\n",
+    "        \n",
+    "        raise RuntimeError('Closest dark exposure time is {} for flat of exposure '\n",
+    "                           'time {}.'.format(closest_dark_exposure, a_flat.header['exptime']))\n",
+    "        \n",
+    "    \n",
+    "    return closest_dark_exposure"
    ]
   },
   {
@@ -50,11 +94,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1\n",
+    "## Example 1: no scaling of dark frames\n",
     "\n",
     "The images for this example are from chip 0 of the Large Format Camera at Palomar Observatory. The raw images are at XXX, and this notebook assumes that you have worked through the notebooks on bias and dark so that there is a folder called `example1-reduced` in the same folder as this notebook. \n",
     "\n",
-    "The cell below checks that the files needed are available."
+    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
+    "\n",
+    "An image collection is defined below, along with a couple of settings useful for this example. "
    ]
   },
   {
@@ -69,27 +115,13 @@
     "\n",
     "combined_dark_files = ifc_reduced.files_filtered(imagetyp='dark', combined=True)\n",
     "\n",
-    "n_combined_dark = len(combined_dark_files)\n",
-    "\n",
-    "if n_combined_dark < 3:\n",
-    "    raise RuntimeError('One or more combined dark is missing. Please re-run the dark notebook.')\n",
-    "elif n_combined_dark > 3:\n",
-    "    raise RuntimeError('There are more combined dark frames than expected.')\n",
-    "    \n",
-    "expected_exposure_times = set([7, 70, 300])\n",
-    "actual_exposure_times = set(h['exptime'] for h in ifc_reduced.headers(imagetyp='dark', combined=True))\n",
-    "\n",
-    "if (expected_exposure_times - actual_exposure_times):\n",
-    "    raise RuntimeError('Encountered unexpected exposure time in combined darks. '\n",
-    "                       'The unexpected times are {}'.format(actual_exposure_times - expected_exposure_times))"
+    "flat_image_type = 'FLATFIELD'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
-    "\n",
     "The raw data should be in the directory `python_imred_data`"
    ]
   },
@@ -102,6 +134,34 @@
     "raw_data = Path('python_imred_data')\n",
     "\n",
     "ifc_raw = ccdp.ImageFileCollection(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below checks that the files needed are available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_combined_dark = len(combined_dark_files)\n",
+    "expected_exposure_times = set([7, 70, 300])\n",
+    "\n",
+    "if n_combined_dark < 3:\n",
+    "    raise RuntimeError('One or more combined dark is missing. Please re-run the dark notebook.')\n",
+    "elif n_combined_dark > 3:\n",
+    "    raise RuntimeError('There are more combined dark frames than expected.')\n",
+    "    \n",
+    "actual_exposure_times = set(h['exptime'] for h in ifc_reduced.headers(imagetyp='dark', combined=True))\n",
+    "\n",
+    "if (expected_exposure_times - actual_exposure_times):\n",
+    "    raise RuntimeError('Encountered unexpected exposure time in combined darks. '\n",
+    "                       'The unexpected times are {}'.format(actual_exposure_times - expected_exposure_times))"
    ]
   },
   {
@@ -159,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trimming off the overscan but such a big difference primarily because the image stretch changed; the lowest pixel values are now around 18000 instead of 2000. With that change the non-uniformity across the detector is much clearer."
+    "Trimming off the overscan makes such a big difference primarily because the image stretch changed; the lowest pixel values are now around 18000 instead of 2000. With that change the non-uniformity across the detector is much clearer."
    ]
   },
   {
@@ -196,47 +256,6 @@
     "We need to subtract the dark without scaling it. Rather than manually figuring out which dark to subtract we use the dark frame closest in exposure time to the flat, within a tolerance of 1 second to ensure that we do not end up using a dark *too* far off in exposure time from the flat.\n",
     "\n",
     "First, find the dark exposure time closest to the flat. We will need to do this again later in the notebook, so we define a function to do it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_nearest_dark_exposure(image, dark_exposure_times, tolerance=0.5):\n",
-    "    \"\"\"\n",
-    "    Find the nearest exposure time of a dark frame to the exposure time of the image,\n",
-    "    raising an error if the difference in exposure time is more than tolerance.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    \n",
-    "    image : astropy.nddata.CCDData\n",
-    "        Image for which a matching dark is needed.\n",
-    "    \n",
-    "    dark_exposure_times : list\n",
-    "        Exposure times for which there are darks.\n",
-    "    \n",
-    "    tolerance : float, optional\n",
-    "        Maximum difference, in seconds, between the image and the closest dark.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    \n",
-    "    float\n",
-    "        Closest dark exposure time to the image.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    dark_exposures = np.array(list(dark_exposure_times))\n",
-    "    idx = np.argmin(np.abs(dark_exposures - image.header['exptime']))\n",
-    "    closest_dark_exposure = dark_exposures[idx]\n",
-    "\n",
-    "    if np.abs(image.header['exptime'] - closest_dark_exposure) > tolerance:\n",
-    "        raise RuntimeError('Closest dark exposure time is {} for flat of exposure '\n",
-    "                           'time {}.'.format(closest_dark_exposure, a_flat.header['exptime']))\n",
-    "    \n",
-    "    return closest_dark_exposure"
    ]
   },
   {
@@ -335,23 +354,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2\n",
+    "## Example 2: Dark frames are scaled\n",
     "\n",
-    "### UPDATE UPDATE\n",
+    "The images in this example, like in the previous notebooks, is a thermo-electrically cooled CCD described in more detail in the [overscan notebook](01.08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M). \n",
     "\n",
-    "The images for this example are from chip 0 of the Large Format Camera at Palomar Observatory. The raw images are at XXX, and this notebook assumes that you have worked through the notebooks on bias and dark so that there is a folder called `example2-reduced` in the same folder as this notebook. \n",
+    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
     "\n",
-    "The cell below checks that the files needed are available."
+    "An image collection is defined below, along with a couple of settings useful for this example. "
    ]
   },
   {
@@ -366,30 +378,14 @@
     "\n",
     "combined_dark_files = ifc_reduced.files_filtered(imagetyp='dark', combined=True)\n",
     "\n",
-    "n_combined_dark = len(combined_dark_files)\n",
-    "\n",
-    "n_dark_expected = 1\n",
-    "\n",
-    "if n_combined_dark < n_dark_expected:\n",
-    "    raise RuntimeError('One or more combined dark is missing. Please re-run the dark notebook.')\n",
-    "elif n_combined_dark > n_dark_expected:\n",
-    "    raise RuntimeError('There are more combined dark frames than expected.')\n",
-    "    \n",
-    "expected_exposure_times = set([90])\n",
-    "actual_exposure_times = set(h['exptime'] for h in ifc_reduced.headers(imagetyp='dark', combined=True))\n",
-    "\n",
-    "if (expected_exposure_times - actual_exposure_times):\n",
-    "    raise RuntimeError('Encountered unexpected exposure time in combined darks. '\n",
-    "                       'The unexpected times are {}'.format(actual_exposure_times - expected_exposure_times))"
+    "flat_image_type = 'FLAT'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
-    "\n",
-    "The raw data should be in the directory `python_imred_data`"
+    "The raw data should be in the directory `example-thermo-electric`"
    ]
   },
   {
@@ -401,6 +397,36 @@
     "raw_data = Path('example-thermo-electric')\n",
     "\n",
     "ifc_raw = ccdp.ImageFileCollection(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below checks that the files needed are available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_combined_dark = len(combined_dark_files)\n",
+    "\n",
+    "n_dark_expected = 1\n",
+    "expected_exposure_times = set([90])\n",
+    "\n",
+    "if n_combined_dark < n_dark_expected:\n",
+    "    raise RuntimeError('One or more combined dark is missing. Please re-run the dark notebook.')\n",
+    "elif n_combined_dark > n_dark_expected:\n",
+    "    raise RuntimeError('There are more combined dark frames than expected.')\n",
+    "    \n",
+    "actual_exposure_times = set(h['exptime'] for h in ifc_reduced.headers(imagetyp='dark', combined=True))\n",
+    "\n",
+    "if (expected_exposure_times - actual_exposure_times):\n",
+    "    raise RuntimeError('Encountered unexpected exposure time in combined darks. '\n",
+    "                       'The unexpected times are {}'.format(actual_exposure_times - expected_exposure_times))"
    ]
   },
   {
@@ -425,9 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### UPDATE UPDATE UPDATE\n",
-    "\n",
-    "There is not a lot of variation in this. Note that the overscan region on the right stands out as a black bar, and that there is apparently also an overscan region across the top of the chip. There appears to be a slight variaion in pixel values from the bottom to the top of the image."
+    "There is a much different pattern of variation across the sensor in this case than in Example 1. The multiple \"donuts\" in the image are pieces of dust and there is significant vignetting (darkening) in the top and bottom corners of the image on the right side."
    ]
   },
   {
@@ -436,9 +460,7 @@
    "source": [
     "### Subtract overscan and trim: only trim for this camera\n",
     "\n",
-    "### UPDATE UPDATE UPDATE\n",
-    "\n",
-    "The overscan is useful for the LFC and needs to be subtracted and trimmed off. See [this example in the dark reduction notebook](03.05-Calibrate-dark-images.ipynb#Decide-which-calibration--steps-to-take) for a review of the overscan parameters. The overscan region is the Python slice `[:, 2055:]` while the region to be retained after trimming is the Python slice `[:, :4096]`."
+    "The overscan is not useful for this camera. The region to be retained after trimming is the Python slice `[:, :4096]`."
    ]
   },
   {
@@ -459,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trimming off the overscan but such a big difference primarily because the image stretch changed; the lowest pixel values are now around 18000 instead of 2000. With that change the non-uniformity across the detector is much clearer."
+    "Trimming off the overscan did not make a big difference primarily because the overscan region of this camera is not useful. A useful overscan would have had values around the bias level for this camera, about 1200 counts. The image stretch did change a bit; prior to trimming the lower end of the color scale was 38000 and now it is 40000. "
    ]
   },
   {
@@ -507,7 +529,14 @@
    "source": [
     "# Display the result so far\n",
     "show_image(a_flat_reduced, cmap='gray')\n",
-    "plt.title('Single flat frame, overscan trimmed and bias subtracted')"
+    "plt.title('Single flat frame, overscan trimmed and bias subtracted');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Except for a change in the image scale shown on the color bar there isn't much visually different after subtracting the bias."
    ]
   },
   {
@@ -541,7 +570,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_darks = {ccd.header['exptime']: ccd for ccd in ifc_reduced.ccds(imagetyp='dark', combined=True)}"
+    "combined_darks = {ccd.header['exptime']: ccd for ccd in ifc_reduced.ccds(imagetyp='dark', combined=True)}\n",
+    "combined_darks"
    ]
   },
   {
@@ -608,13 +638,6 @@
     "    # Save the result\n",
     "    ccd.write(reduced_path / save_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
