More text in the flat combination notebook

--- a/notebooks/05.04-Combining-flats.ipynb
+++ b/notebooks/05.04-Combining-flats.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combining flats\n"
+    "# Combining flats\n",
+    "\n",
+    "There is one step in combining flats that is different than for most other image combination: the flats should be scaled to a common value before combining them. This is particularly important if the flats are twilight flats in which the average image value typically changes significantly as the images are being taken.\n",
+    "\n",
+    "Flats are typically grouped by filter when combining them. That is, one combined flat is produced for each filter in which flats were taken.\n",
+    "\n",
+    "Combination will be done for each of the two examples in the previous notebook."
    ]
   },
   {
@@ -39,7 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1"
+    "## Example 1\n",
+    "\n",
+    "We begin by setting up an image collection for the reduced data."
    ]
   },
   {
@@ -54,6 +52,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll first check what filters are present."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -64,13 +69,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These flats are dome flats, essentially pictures of a screen in the dome illuminated by a light source, so one would not expect there to be much variable in the typical pixel value between different exposures. There is typically *some* variation, though, so we graph it below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "median_count = [np.median(data) for data in ifc.data(imagetyp='flatfield')]\n",
+    "mean_count = [np.mean(data) for data in ifc.data(imagetyp='flatfield')]\n",
+    "plt.plot(median_count, label='median')\n",
+    "plt.plot(mean_count, label='mean')\n",
+    "plt.xlabel('Image number')\n",
+    "plt.ylabel('Count (ADU)')\n",
+    "plt.title('Pixel value in calibrated flat frames')\n",
+    "plt.legend()\n",
     "print(median_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although this is less frame-to-frame variation than we will see in Example 2, it is about 5%. If we were to combine these without scaling the flats to a common value then the images with higher counts would effectively get more weight than the images. \n",
+    "\n",
+    "There is a substantial difference between the mean and median of this data. Typically it is better to use the median because extreme values do not affect the median as much as the mean.\n",
+    "\n",
+    "To scale the frames so that they have the same median value we need to define a function that can calculate the inverse of the median given the data."
    ]
   },
   {
@@ -80,8 +110,22 @@
    "outputs": [],
    "source": [
     "def inv_median(a):\n",
-    "    return 1 / np.median(a)\n",
-    "\n",
+    "    return 1 / np.median(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function is passed into the `scale` argument of `combine` below. One combined flat is created for each filter in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for filt in flat_filters:\n",
     "    to_combine = ifc.files_filtered(imagetyp='flatfield', filter=filt, include_path=True)\n",
     "    combined_flat = ccdp.combine(to_combine,\n",
@@ -111,21 +155,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inv_mean(a):\n",
-    "    return 1 / np.mean(a)\n",
+    "to_combine = ifc.files_filtered(imagetyp='flatfield', filter=filt,\n",
+    "                                include_path=True)\n",
+    "bad_combined_flat = ccdp.combine(to_combine,\n",
+    "                             method='average',\n",
+    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
+    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                             mem_limit=350e6\n",
+    "                            )\n",
     "\n",
-    "for filt in flat_filters:\n",
-    "    to_combine = ifc.files_filtered(imagetyp='flatfield', filter=filt, include_path=True)\n",
-    "    combined_flat = ccdp.combine(to_combine,\n",
-    "                                 method='average', scale=inv_mean,\n",
-    "                                 sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                                 sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
-    "                                 mem_limit=350e6\n",
-    "                                )\n",
-    "\n",
-    "    combined_flat.meta['combined'] = True\n",
-    "#     dark_file_name = 'combined_flat_filter_{}.fit'.format(filt.replace(\"''\", \"p\"))\n",
-    "#     combined_flat.write(calibrated_path / dark_file_name)"
+    "bad_combined_flat.meta['combined'] = True\n"
    ]
   },
   {
@@ -134,44 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_image(combined_flat, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo = hist(combined_flat.data.flatten(), bins=100)\n",
-    "plt.semilogy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.mean((foo[1][1:]) * foo[0])/np.sum(foo[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(foo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo[1]"
+    "show_image(bad_combined_flat, cmap='gray')"
    ]
   },
   {
@@ -216,6 +218,13 @@
    "outputs": [],
    "source": [
     "median_count = [np.median(data) for data in ifc.data(imagetyp='flat')]\n",
+    "mean_count = [np.mean(data) for data in ifc.data(imagetyp='flat')]\n",
+    "plt.plot(median_count, label='median')\n",
+    "plt.plot(mean_count, label='mean')\n",
+    "plt.xlabel('Image number')\n",
+    "plt.ylabel('Count (ADU)')\n",
+    "plt.title('Pixel value in calibrated flat frames')\n",
+    "plt.legend()\n",
     "print(median_count)"
    ]
   },
@@ -257,21 +266,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inv_mean(a):\n",
-    "    return 1 / np.mean(a)\n",
+    "to_combine = ifc.files_filtered(imagetyp='flat', filter=filt,\n",
+    "                                include_path=True)\n",
+    "bad_combined_flat = ccdp.combine(to_combine,\n",
+    "                             method='average',\n",
+    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
+    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                             mem_limit=350e6\n",
+    "                            )\n",
     "\n",
-    "for filt in flat_filters:\n",
-    "    to_combine = ifc.files_filtered(imagetyp='flat', filter=filt, include_path=True)\n",
-    "    combined_flat = ccdp.combine(to_combine,\n",
-    "                                 method='average', scale=inv_mean,\n",
-    "                                 sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                                 sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
-    "                                 mem_limit=350e6\n",
-    "                                )\n",
-    "\n",
-    "    combined_flat.meta['combined'] = True\n",
-    "#     dark_file_name = 'combined_flat_filter_{}.fit'.format(filt.replace(\"''\", \"p\"))\n",
-    "#     combined_flat.write(calibrated_path / dark_file_name)"
+    "bad_combined_flat.meta['combined'] = True"
    ]
   },
   {
@@ -280,18 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_image(combined_flat, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo = hist(combined_flat.data.flatten(), bins=100)\n",
-    "plt.semilogy()\n",
-    "plt.grid()"
+    "show_image(bad_combined_flat, cmap='gray')"
    ]
   },
   {
